[tool.poetry]
name = "algs4"
version = "0.1.0"
description = ""
authors = ["alefeans <alefeans2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pytest-watch = "^4.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
